# project-agent-swarm

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  swarm.yaml
adapters/claude-code/: CLAUDE.md  CLAUDE_OPUS.md  CLAUDE_SONNET.md
adapters/claude-code/.claude/agents/: architect.md  debugger.md  implementer.md  qa-engineer.md  reviewer.md
adapters/gemini/: GEMINI.md  GEMINI_FLASH.md  GEMINI_PRO.md
adapters/generic/: system-prompt.md
adapters/openai/: AGENTS.md
agents/: architect.yaml  debugger.gemini.md  debugger.md  implementer.yaml  orchestrator.gemini.md  reviewer.yaml
apps/api/: main.py
apps/dashboard/: index.html
docs/: AUTONOMOUS.md  DRIVERS.md  QUICKSTART.md  WORKFLOWS.md  future-scope-agentic-flow.md  review_report.md
examples/: example_usage.py
infra/: Dockerfile  docker-compose.yml  main.tf
schema/: agent.schema.json
scripts/: install.sh
src/agent_core/: __init__.py  cli.py  context_optimizer.py  executor.py  orchestrator.py  persistence.py  registry.py  repo_analyzer.py  schemas.py
src/agent_core/agents/: README.md  architect.md  debugger.yaml  implementer.md  orchestrator.md  orchestrator.yaml  qa-engineer.md  qa-engineer.yaml  reviewer.gemini.md  reviewer.md
src/agent_core/drivers/: __init__.py  base.py  claude.py  codex.py  gemini.py  redis_store.py
src/agent_core/security/: prompt_guard.py  tool_sandbox.py
tests/: conftest.py  test_api.py  test_context_optimizer.py  test_driver_http.py  test_drivers.py  test_executor.py  test_orchestrator.py  test_persistence.py  test_repo_analyzer.py  test_schemas.py
tests/evals/: golden_tasks.json  run_evals.py
workflows/: bug-fix.md  code-review.md  feature-dev.md  test-generation.md
