[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-core"
version = "0.1.0"
description = "Installable agent swarm configuration and orchestration package"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "SasieKumar Shanmugam", email = "121654385+ramuks22@users.noreply.github.com" }
]


dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "tenacity>=8.0",
    "tiktoken>=0.7",
    "rich>=13.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
# L-02: Redis state store — install with: pip install 'agent-core[redis]'
# or Docker: --build-arg INSTALL_EXTRAS=redis
redis = ["redis[asyncio]>=4.2"]

dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
    "uv>=0.1",
    "fakeredis[aioredis]>=2.0",  # L-02: Redis contract tests (no daemon required)
]

[project.scripts]
agent-core = "agent_core.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_core"]
include = ["src/agent_core/agents/*.yaml", "src/agent_core/agents/*.md"]

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S"]
ignore = ["S101", "E501", "S110", "UP"]  # Permit asserts, long lines, and suppress 3.10+ upgrade suggestions for 3.9 compatibility.
# S307 suppression removed: eval() replaced with _safe_eval_gate AST evaluator

[tool.mypy]
strict = true
python_version = "3.9"

[[tool.mypy.overrides]]
module = ["redis", "redis.*", "tiktoken", "yaml"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
